fix: fix hero slider

--- a/src/components/hero/index.html
+++ b/src/components/hero/index.html
@@ -71,7 +71,15 @@
     <div class="container hero__container-pagination"> 
       <div class="slider__pagination hero__pagination swiper-pagination"></div>
     </div>
-    <div class="slider__button-prev hero__button-prev swiper-button-prev"></div>
-    <div class="slider__button-next hero__button-next swiper-button-next"></div>
+    <div class="slider__button-prev hero__button-prev swiper-button-prev">
+      <svg class="icon-svg">
+        <use xlink:href="assets/img/svg-sprite/sprite.svg#left"></use>
+      </svg>
+    </div>
+    <div class="slider__button-next hero__button-next swiper-button-next">
+      <svg class="icon-svg">
+        <use xlink:href="assets/img/svg-sprite/sprite.svg#right"></use>
+      </svg>
+    </div>
   </div>
 </section>
