--- a/src/components/hero/index.scss
+++ b/src/components/hero/index.scss
@@ -96,15 +96,71 @@
   &__container-pagination {
     height: 0;
   }
-  
+
   &__pagination {
+
     position: relative;
     bottom: 120px!important;
 
+    display: flex;
+    flex-wrap: wrap;
+    gap: 45px 4px;
+
     @media only screen and (max-width: $bp-md){
-        bottom: 80px!important;
+      bottom: 80px!important;
+    }
+
+    & .swiper-pagination-bullet {
+      position: relative;
+      width: 178px;
+      height: 2px;
+      background-color: $white;
+      color: $white;
+      margin: 0!important;
+      border-radius: unset;
+      opacity: 0.3;
+      font-size: 28px;
+      font-weight: 700;
+      line-height: 150%;
+      transition: all 0.2s ease-in-out;
+
+      @media only screen and (max-width: $bp-xl){
+          width: 100px; 
+          font-size: 24px;
+      }
+      @media only screen and (max-width: $bp-md){
+          width: 80px;
+          font-size: 20px; 
+      }
+
+      &:hover {
+        opacity: 1;
+      }
+    }
+
+    & .swiper-pagination-bullet-active {
+      opacity: 1;
+    }
+
+    & .swiper-pagination-numbered {
+      position: absolute;
+      top: -50px;
+      left: 0;
+      width: 100%;
+      display: block;
+      text-align: left;
+      padding-bottom: 10px;
+
+      @media only screen and (max-width: $bp-xl){
+          top: -40px; 
+      }
+
+      @media only screen and (max-width: $bp-md){
+          top: -30px; 
+      }
     }
   }
+
   &__button-prev, &__button-next {
     @media only screen and (max-width: $bp-md){
        display: none; 
