feat: implement section slider component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -29,6 +29,8 @@
 @import "../components/benefits/";
 @import "../components/small-form/";
 @import "../components/our-services/";
+@import "../components/project-card/";
+@import "../components/section-slider/";
 
 @import "../components/subscribe-form/";
 @import "../components/footer/";
