--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -403,6 +403,10 @@ h6,
   text-align: center;
 }
 
+.text-width-limit {
+  max-width: 705px;
+}
+
 .input__native {
   width: 100%;
   padding: 11px 16px 12px 16px;
@@ -422,10 +426,11 @@ h6,
           box-shadow: 0px 4px 4px -4px rgba(30,33,44,.03),0px 12px 10px -6px rgba(255,90,48,.04),0px 30px 24px -10px rgba(255,90,48,.05),0px 80px 80px -20px rgba(255,90,48,.08);
 }
 
+.project-card,
 .our-services__item {
   border-radius: 4px;
-  border: 1px solid var(--gray-300, #E5E8ED);
-  background: var(--white, #FFF);
+  overflow: hidden;
+  border: 1px solid #e5e8ed;
   -webkit-box-shadow: 0px 4px 4px -4px rgba(30,33,44,.03),0px 12px 10px -6px rgba(154,156,165,.04),0px 30px 24px -10px rgba(154,156,165,.05),0px 80px 80px -20px rgba(154,156,165,.08);
           box-shadow: 0px 4px 4px -4px rgba(30,33,44,.03),0px 12px 10px -6px rgba(154,156,165,.04),0px 30px 24px -10px rgba(154,156,165,.05),0px 80px 80px -20px rgba(154,156,165,.08);
 }
@@ -841,8 +846,8 @@ h6,
   -webkit-transform: translateY(-50%);
       -ms-transform: translateY(-50%);
           transform: translateY(-50%);
-  -webkit-transition: background-color .2s ease-in-out;
-  transition: background-color .2s ease-in-out;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
 }
 
 .slider__button-prev:hover,
@@ -853,62 +858,18 @@ h6,
 .slider__button-prev::after,
 .slider__button-next::after {
   content: "";
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: contain;
-  height: 50%;
+}
+
+.slider__button-prev .icon-svg,
+.slider__button-next .icon-svg {
   width: 50%;
-}
-
-.slider__button-prev::after {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9.20711 17.2071C8.81658 17.5976 8.18342 17.5976 7.79289 17.2071L3.29289 12.7071C2.90237 12.3166 2.90237 11.6834 3.29289 11.2929L7.79289 6.79289C8.18342 6.40237 8.81658 6.40237 9.20711 6.79289C9.59763 7.18342 9.59763 7.81658 9.20711 8.20711L6.41421 11L20 11C20.5523 11 21 11.4477 21 12C21 12.5523 20.5523 13 20 13L6.41421 13L9.20711 15.7929C9.59763 16.1834 9.59763 16.8166 9.20711 17.2071Z' fill='%23424551'/%3E%3C/svg%3E");
-}
-
-.slider__button-next::after {
-  background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M14.7929 6.79289C15.1834 6.40237 15.8166 6.40237 16.2071 6.79289L20.7071 11.2929C21.0976 11.6834 21.0976 12.3166 20.7071 12.7071L16.2071 17.2071C15.8166 17.5976 15.1834 17.5976 14.7929 17.2071C14.4024 16.8166 14.4024 16.1834 14.7929 15.7929L17.5858 13H4C3.44772 13 3 12.5523 3 12C3 11.4477 3.44772 11 4 11H17.5858L14.7929 8.20711C14.4024 7.81658 14.4024 7.18342 14.7929 6.79289Z' fill='%23424551'/%3E%3C/svg%3E");
-}
-
-.slider__pagination {
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  -ms-flex-wrap: wrap;
-      flex-wrap: wrap;
-  gap: 45px 4px;
-}
-
-.slider__pagination .swiper-pagination-bullet {
-  position: relative;
-  width: 178px;
-  height: 2px;
-  background-color: #fff;
-  color: #fff;
-  margin: 0 !important;
-  border-radius: unset;
-  opacity: .3;
-  font-size: 28px;
-  font-weight: 700;
-  line-height: 150%;
-  -webkit-transition: all .2s ease-in-out;
-  transition: all .2s ease-in-out;
-}
-
-.slider__pagination .swiper-pagination-bullet:hover {
-  opacity: 1;
+  height: 50%;
+  -webkit-transition: fill .2s ease-in-out;
+  transition: fill .2s ease-in-out;
 }
 
 .slider__pagination .swiper-pagination-bullet-active {
-  opacity: 1;
-}
-
-.slider__pagination .swiper-pagination-numbered {
-  position: absolute;
-  top: -50px;
-  left: 0;
-  width: 100%;
-  display: block;
-  text-align: left;
-  padding-bottom: 10px;
+  background: #ff5a30;
 }
 
 .go-to-top {
@@ -1449,6 +1410,46 @@ h6,
 .hero__pagination {
   position: relative;
   bottom: 120px !important;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 45px 4px;
+}
+
+.hero__pagination .swiper-pagination-bullet {
+  position: relative;
+  width: 178px;
+  height: 2px;
+  background-color: #fff;
+  color: #fff;
+  margin: 0 !important;
+  border-radius: unset;
+  opacity: .3;
+  font-size: 28px;
+  font-weight: 700;
+  line-height: 150%;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.hero__pagination .swiper-pagination-bullet:hover {
+  opacity: 1;
+}
+
+.hero__pagination .swiper-pagination-bullet-active {
+  opacity: 1;
+}
+
+.hero__pagination .swiper-pagination-numbered {
+  position: absolute;
+  top: -50px;
+  left: 0;
+  width: 100%;
+  display: block;
+  text-align: left;
+  padding-bottom: 10px;
 }
 
 .hero__button-prev {
@@ -1504,7 +1505,7 @@ h6,
 }
 
 .section__bottom {
-  margin-top: 85px;
+  margin-top: 80px;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1525,7 +1526,8 @@ h6,
 }
 
 .section .benefits,
-.section .our-services {
+.section .our-services,
+.section .section-slider {
   margin-top: 60px;
 }
 
@@ -1636,6 +1638,9 @@ h6,
   -webkit-box-pack: center;
       -ms-flex-pack: center;
           justify-content: center;
+  list-style: none;
+  padding: 0;
+  margin: 0;
   gap: 30px;
 }
 
@@ -1646,6 +1651,11 @@ h6,
       flex-shrink: 0;
   max-width: 285px;
   aspect-ratio: 1/1;
+  background-color: #fff;
+  padding: 15px;
+}
+
+.our-services__link {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1656,20 +1666,19 @@ h6,
       -ms-flex-pack: center;
           justify-content: center;
   text-align: center;
-  border: 1px solid #e5e8ed;
-  padding: 15px;
-  overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
-.our-services__item:hover {
+.our-services__link:hover {
   color: #fff;
 }
 
-.our-services__item:hover .our-services__icon {
+.our-services__link:hover .our-services__icon {
   fill: #fff;
 }
 
-.our-services__item:hover .our-services__img {
+.our-services__link:hover .our-services__img {
   opacity: 1;
 }
 
@@ -1686,11 +1695,6 @@ h6,
   fill: #ff5a30;
   -webkit-transition: fill .2s ease-in-out;
   transition: fill .2s ease-in-out;
-}
-
-.our-services__title {
-  -webkit-transition: color .2s ease-in-out;
-  transition: color .2s ease-in-out;
 }
 
 .our-services__img {
@@ -1712,6 +1716,125 @@ h6,
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
+}
+
+.project-card {
+  position: relative;
+  width: 100%;
+  max-width: 390px;
+  height: 440px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-transition: all .2s ease-in-out;
+  transition: all .2s ease-in-out;
+}
+
+.project-card:hover {
+  -webkit-box-shadow: 0px 4px 4px -4px rgba(30,33,44,.05),0px 12px 10px -6px rgba(154,156,165,.08),0px 30px 24px -10px rgba(154,156,165,.1),0px 80px 80px -20px rgba(154,156,165,.16);
+          box-shadow: 0px 4px 4px -4px rgba(30,33,44,.05),0px 12px 10px -6px rgba(154,156,165,.08),0px 30px 24px -10px rgba(154,156,165,.1),0px 80px 80px -20px rgba(154,156,165,.16);
+}
+
+.project-card__content {
+  margin-top: auto;
+  text-align: center;
+  background-color: #fff;
+  padding: 16px 20px 24px;
+  min-height: 95px;
+  -webkit-transition: padding .3s ease-in-out;
+  transition: padding .3s ease-in-out;
+}
+
+.project-card__desc {
+  margin-top: 4px;
+}
+
+.project-card__button {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  -webkit-transform: translate(-50%, 50px);
+      -ms-transform: translate(-50%, 50px);
+          transform: translate(-50%, 50px);
+  opacity: 0;
+  white-space: nowrap;
+  -webkit-transition: all .3s ease-in-out;
+  transition: all .3s ease-in-out;
+}
+
+.project-card:hover .project-card__content {
+  padding-bottom: 92px;
+}
+
+.project-card:hover .project-card__button {
+  -webkit-transform: translate(-50%, -24px);
+      -ms-transform: translate(-50%, -24px);
+          transform: translate(-50%, -24px);
+  opacity: 1;
+  margin-top: 24px;
+}
+
+.project-card__img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 95px;
+  z-index: -1;
+}
+
+.project-card__img img {
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.section-slider {
+  position: relative;
+}
+
+.section-slider .swiper {
+  padding: 0 20px 80px;
+  margin: 0 -20px -80px;
+}
+
+.section-slider__slide>div {
+  margin: 0 auto;
+}
+
+.section-slider__buttons {
+  position: absolute;
+  top: -72px;
+  right: 35px;
+}
+
+.section-slider__button-prev {
+  left: unset;
+  right: 0;
+}
+
+.section-slider__button-next {
+  left: 0;
+  right: unset;
+}
+
+.section-slider__button-prev:hover,
+.section-slider__button-next:hover {
+  background-color: #ff5a30;
+  color: #fff;
+}
+
+.section-slider__pagination {
+  display: none;
+}
+
+.section-slider__pagination.swiper-pagination-bullets {
+  bottom: 50px;
 }
 
 .subscribe-form__wrapper {
@@ -1960,6 +2083,10 @@ h6,
   .hero__button-next {
     right: 5px;
   }
+
+  .section-slider__buttons {
+    top: -32px;
+  }
 }
 
 @media only screen and (max-width: 1201px) {
@@ -1975,15 +2102,6 @@ h6,
   h2,
   .h2 {
     font-size: calc(1.5rem + 1.8vw);
-  }
-
-  .slider__pagination .swiper-pagination-bullet {
-    width: 100px;
-    font-size: 24px;
-  }
-
-  .slider__pagination .swiper-pagination-numbered {
-    top: -40px;
   }
 
   .header__container {
@@ -2013,6 +2131,15 @@ h6,
 
   .hero {
     margin-top: 65px;
+  }
+
+  .hero__pagination .swiper-pagination-bullet {
+    width: 100px;
+    font-size: 24px;
+  }
+
+  .hero__pagination .swiper-pagination-numbered {
+    top: -40px;
   }
 
   .section {
@@ -2127,15 +2254,6 @@ h6,
     font-size: 12px;
   }
 
-  .slider__pagination .swiper-pagination-bullet {
-    width: 80px;
-    font-size: 20px;
-  }
-
-  .slider__pagination .swiper-pagination-numbered {
-    top: -30px;
-  }
-
   .go-to-top {
     right: 20px;
     bottom: 20px;
@@ -2158,6 +2276,15 @@ h6,
 
   .hero__pagination {
     bottom: 80px !important;
+  }
+
+  .hero__pagination .swiper-pagination-bullet {
+    width: 80px;
+    font-size: 20px;
+  }
+
+  .hero__pagination .swiper-pagination-numbered {
+    top: -30px;
   }
 
   .hero__button-prev,
@@ -2195,7 +2322,8 @@ h6,
   }
 
   .section .benefits,
-  .section .our-services {
+  .section .our-services,
+  .section .section-slider {
     margin-top: 30px;
   }
 
@@ -2210,6 +2338,19 @@ h6,
   .small-form__input {
     -ms-flex-preferred-size: 100%;
         flex-basis: 100%;
+  }
+
+  .section-slider .swiper {
+    padding: 0 0 80px;
+    margin: 0 0 -80px;
+  }
+
+  .section-slider__buttons {
+    display: none;
+  }
+
+  .section-slider__pagination {
+    display: block;
   }
 
   .footer__top {
@@ -2303,7 +2444,8 @@ h6,
   }
 
   .section__bottom {
-    margin-top: 30px;
+    margin-top: 40px;
+    row-gap: 10px;
   }
 
   .benefits__item {
@@ -2328,8 +2470,8 @@ h6,
   }
 
   .our-services__item {
-    padding: 5px;
     max-width: 250px;
+    padding: 5px;
   }
 
   .our-services__icon {
@@ -2340,6 +2482,14 @@ h6,
 
   .our-services__title {
     font-size: 16px;
+  }
+
+  .project-card {
+    height: 300px;
+  }
+
+  .project-card__content {
+    padding: 14px 5px 16px;
   }
 
   .subscribe-form__input {
