feat: connection simple slider component

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -31,6 +31,7 @@
 @import "../components/our-services/";
 @import "../components/project-card/";
 @import "../components/section-slider/";
+@import "../components/simple-slider/";
 
 @import "../components/subscribe-form/";
 @import "../components/footer/";
