--- a/src/components/section/index.scss
+++ b/src/components/section/index.scss
@@ -39,6 +39,14 @@
     }
   }
 
+  &--mix-pd {
+    padding: 85px 0 60px;
+
+    @media only screen and (max-width: $bp-md){
+      padding: 40px 0; 
+    }
+  }
+
   &--sm-pd {
     padding: 60px 0;
 
@@ -55,6 +63,10 @@
     width: 100%;
     height: 100%;
     object-fit: cover;
+  }
+
+  &--bg {
+    background-color: $grey-200;
   }
 
   h2, .h2 {
