feat: add connection to main

--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -32,6 +32,8 @@
 @import "../components/project-card/";
 @import "../components/section-slider/";
 @import "../components/simple-slider/";
+@import "../components/img-content/";
+@import "../components/reviews-slider/";
 
 @import "../components/subscribe-form/";
 @import "../components/footer/";
