--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -34,6 +34,7 @@
 @import "../components/simple-slider/";
 @import "../components/img-content/";
 @import "../components/reviews-slider/";
+@import "../components/digits/";
 
 @import "../components/subscribe-form/";
 @import "../components/footer/";
