--- a/src/components/header/index.scss
+++ b/src/components/header/index.scss
@@ -6,24 +6,6 @@
   z-index: 5;
   width: 100%;
 
-  &::before {
-    position: fixed;
-    height: 100%;
-    left: 0;
-    top: 0;
-    width: 100%;
-    z-index: -1;
-    content: "";
-    background-color: #2a2a2a;
-    opacity: 0;
-    transition: all .3s ease-in-out;
-  }
-
-  &.faded::before {
-    z-index: 0;
-    opacity: 0.8;
-  }
-
   &--main {
     background-color: $white;
   }
@@ -43,6 +25,8 @@
     width: 130px;
     height: 22px;
     flex-shrink: 0;
+    position: relative;
+    z-index: 5;
 
     @media only screen and (max-width: $bp-xl){
        width: 100px; 
@@ -60,6 +44,8 @@
   }
 
   &__contacts {
+    position: relative;
+    z-index: 5;
   }
 
   &__burger {
@@ -70,6 +56,25 @@
        margin-left: auto;
     }
   }
+
+  &.is-open {
+    .burger {
+      
+      span {
+        transition: opacity .3s ease;
+        opacity: 0;
+      }
+
+      &::before {
+        transform: translateY(8px) rotate(45deg);
+      }
+
+      &::after {
+        transform: translateY(-8px) rotate(-45deg);
+      }
+    }
+
+  }
 }
 .top-menu {
 
@@ -77,14 +82,13 @@
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 15;
+    z-index: 1;
     background-color: $white;
     min-height: 100vh;
     max-height: 100vh;
-    max-width: 95vw;
-    min-width: 50vw;
+    width: 100%;
     overflow-y: auto;
-    padding: 20px 20px 10px 20px; 
+    padding: 100px 20px 10px 20px; 
     transition: transform .3s ease-in-out;
 
     &:not(.is-active) {
@@ -221,13 +225,14 @@
 
   & span, &::after, &::before{
     content: "";
-    transition: all .3s ease 0s;
     left: 0;
     position: absolute;
     width: 100%;
     height: 3px;
     background-color: $main-text-color;
-  }
+    transition: transform .5s cubic-bezier(.37,-.38,.59,1.42),-webkit-transform .5s cubic-bezier(.37,-.38,.59,1.42);
+  } 
+
   &::before {
     top: 0px;
   }
@@ -235,6 +240,8 @@
     bottom: 0px;
   }
   span {
+    opacity: 1;
     top: calc(50% - 1px);
+    transition: opacity .3s ease .2s;
   }
 }
