--- a/src/styles/global/_theme.scss
+++ b/src/styles/global/_theme.scss
@@ -42,6 +42,10 @@ body {
       transition: opacity .3s ease-in-out, z-index 0s ease;
     }
   }
+
+  &.is-hidden {
+    overflow: hidden;
+  }
 }
 
 button {
