--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -263,6 +263,10 @@ body.faded::before {
   transition: opacity .3s ease-in-out,z-index 0s ease;
 }
 
+body.is-hidden {
+  overflow: hidden;
+}
+
 button {
   cursor: pointer;
   color: inherit;
@@ -411,6 +415,10 @@ h6,
   max-width: 705px;
 }
 
+.text-grey {
+  color: #787a80;
+}
+
 .input__native {
   width: 100%;
   padding: 11px 16px 12px 16px;
@@ -439,6 +447,7 @@ h6,
           box-shadow: 0px 4px 4px -4px rgba(30,33,44,.03),0px 12px 10px -6px rgba(154,156,165,.04),0px 30px 24px -10px rgba(154,156,165,.05),0px 80px 80px -20px rgba(154,156,165,.08);
 }
 
+.digits__circle::after,
 .our-services__img::after {
   content: "";
   display: block;
@@ -1214,6 +1223,8 @@ h6,
   height: 22px;
   -ms-flex-negative: 0;
       flex-shrink: 0;
+  position: relative;
+  z-index: 5;
 }
 
 .header__logo img {
@@ -1223,8 +1234,31 @@ h6,
      object-fit: contain;
 }
 
+.header__contacts {
+  position: relative;
+  z-index: 5;
+}
+
 .header__burger {
   display: none;
+}
+
+.header.is-open .burger span {
+  -webkit-transition: opacity .3s ease;
+  transition: opacity .3s ease;
+  opacity: 0;
+}
+
+.header.is-open .burger::before {
+  -webkit-transform: translateY(8px) rotate(45deg);
+      -ms-transform: translateY(8px) rotate(45deg);
+          transform: translateY(8px) rotate(45deg);
+}
+
+.header.is-open .burger::after {
+  -webkit-transform: translateY(-8px) rotate(-45deg);
+      -ms-transform: translateY(-8px) rotate(-45deg);
+          transform: translateY(-8px) rotate(-45deg);
 }
 
 .top-menu__list {
@@ -1319,13 +1353,12 @@ h6,
 .burger::after,
 .burger::before {
   content: "";
-  -webkit-transition: all .3s ease 0s;
-  transition: all .3s ease 0s;
   left: 0;
   position: absolute;
   width: 100%;
   height: 3px;
   background-color: #1e212c;
+  transition: transform .5s cubic-bezier(0.37, -0.38, 0.59, 1.42),-webkit-transform .5s cubic-bezier(0.37, -0.38, 0.59, 1.42);
 }
 
 .burger::before {
@@ -1337,7 +1370,10 @@ h6,
 }
 
 .burger span {
+  opacity: 1;
   top: calc(50% - 1px);
+  -webkit-transition: opacity .3s ease .2s;
+  transition: opacity .3s ease .2s;
 }
 
 .hero {
@@ -1512,10 +1548,6 @@ h6,
   margin-bottom: 24px;
 }
 
-.section p {
-  color: #787a80;
-}
-
 .section__bottom {
   margin-top: 80px;
   display: -webkit-box;
@@ -1598,6 +1630,10 @@ h6,
 
 .benefits__title {
   margin-bottom: 8px;
+}
+
+.benefits__desc {
+  color: #787a80;
 }
 
 .small-form {
@@ -1767,6 +1803,7 @@ h6,
 
 .project-card__desc {
   margin-top: 4px;
+  color: #787a80;
 }
 
 .project-card__button {
@@ -1956,6 +1993,7 @@ h6,
 
 .reviews-slider__text {
   margin-top: 24px;
+  color: #424551;
 }
 
 .reviews-slider__bottom {
@@ -1965,6 +2003,7 @@ h6,
 
 .reviews-slider__author-position {
   margin-top: 4px;
+  color: #787a80;
 }
 
 .reviews-slider__buttons {
@@ -2004,6 +2043,95 @@ h6,
 
 .reviews-slider__button-next {
   right: 0;
+}
+
+:root {
+  --dig-color: black;
+}
+
+.digits {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  gap: 48px;
+}
+
+.digits__item {
+  text-align: center;
+  width: 148px;
+}
+
+.digits__circle {
+  position: relative;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  width: 100%;
+  aspect-ratio: 1;
+}
+
+.digits__circle::after {
+  z-index: -1;
+  border: 6px solid var(--dig-color);
+  border-radius: 50%;
+  opacity: .3;
+}
+
+.digits__progress {
+  position: absolute;
+  inset: 0;
+  width: 100%;
+  height: 100%;
+}
+
+.digits__progress circle {
+  stroke: var(--dig-color);
+  stroke-width: 6px;
+  fill: none;
+  -webkit-transform: rotate(-90deg);
+      -ms-transform: rotate(-90deg);
+          transform: rotate(-90deg);
+  -webkit-transform-origin: center;
+      -ms-transform-origin: center;
+          transform-origin: center;
+}
+
+.digits__value {
+  font-size: 32px;
+  font-weight: 700;
+  line-height: 1.5;
+}
+
+.digits__text {
+  margin-top: 20px;
+  color: #1e212c;
+}
+
+.digits__item--info-1 {
+  --dig-color: #F89828;
+}
+
+.digits__item--info-2 {
+  --dig-color: #F52F6E;
+}
+
+.digits__item--info-3 {
+  --dig-color: #5A87FC;
+}
+
+.digits__item--info-4 {
+  --dig-color: #03CEA4;
 }
 
 .subscribe-form__wrapper {
@@ -2330,14 +2458,13 @@ h6,
     position: fixed;
     top: 0;
     right: 0;
-    z-index: 15;
+    z-index: 1;
     background-color: #fff;
     min-height: 100vh;
     max-height: 100vh;
-    max-width: 95vw;
-    min-width: 50vw;
+    width: 100%;
     overflow-y: auto;
-    padding: 20px 20px 10px 20px;
+    padding: 100px 20px 10px 20px;
     -webkit-transition: -webkit-transform .3s ease-in-out;
     transition: -webkit-transform .3s ease-in-out;
     transition: transform .3s ease-in-out;
