--- a/src/styles/global/_vars.scss
+++ b/src/styles/global/_vars.scss
@@ -10,6 +10,7 @@ $main-accent-color-hover: #FC3300;
 $grey-200: #F4F5F6;
 $grey-300: #E5E8ED;
 $grey-400: #D7DADD;
+$grey-500: #B3B7BC;
 $grey-600: #9A9CA5;
 $grey-700: #787A80;
 $grey-800: #424551;
