--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -35,6 +35,9 @@
 @import "../components/img-content/";
 @import "../components/reviews-slider/";
 @import "../components/digits/";
+@import "../components/main-news/";
+@import "../components/news-card/";
 
+@import "../components/request-form/";
 @import "../components/subscribe-form/";
 @import "../components/footer/";
