--- a/src/components/section/index.scss
+++ b/src/components/section/index.scss
@@ -20,6 +20,7 @@
 
   &--absolute {
     margin: -60px 0 -212px;
+    z-index: 1;
 
     @media only screen and (max-width: $bp-md){
        margin-top: -30px; 
@@ -31,6 +32,15 @@
   }
 
   // size
+
+  &--big-pd {
+    padding: 180px 0 120px;
+
+    @media only screen and (max-width: $bp-md){
+      padding: 40px 0; 
+    }
+  }
+
   &--md-pd {
     padding: 85px 0;
 
@@ -69,6 +79,12 @@
     background-color: $grey-200;
   }
 
+  &--decor {
+    background-repeat: no-repeat;
+    background-position: top -355px left -160px;
+    background-size: 575px;
+  }
+
   h2, .h2 {
     margin-bottom: 24px;
 
@@ -104,11 +120,18 @@
     }
   }
 
-  & .benefits, & .our-services, & .section-slider {
+  & .benefits, & .our-services, & .section-slider, & .digits, & .main-news {
     margin-top: 60px;
 
     @media only screen and (max-width: $bp-md){
        margin-top: 30px; 
+    }
+  }
+  & .digits {
+    margin-bottom: 180px;
+
+    @media only screen and (max-width: $bp-md){
+       margin-bottom: 60px; 
     }
   }
 
