--- a/src/ui/checkbox/index.scss
+++ b/src/ui/checkbox/index.scss
@@ -2,14 +2,14 @@
 
 .checkbox {
   display: inline-flex;
-  align-items: center;
   gap: 12px;
 
   &__input {
     appearance: none;
-    border: 1px solid $main-text-color;
-    width: 24px;
-    height: 24px;
+    border: 1px solid $grey-500;
+    border-radius: 3px;
+    width: 16px;
+    height: 16px;
     flex-shrink: 0;
     background-position: center;
     background-repeat: no-repeat;
@@ -17,7 +17,7 @@
     &:checked {
       background-color: $main-accent-color;
       border-color: $main-accent-color;
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='24' height='24' viewBox='0 0 24 24' fill='none'%3E%3Cpath d='M19.018 5.99683C18.762 5.99683 18.495 6.08083 18.3 6.27283L9.59301 14.8668C9.33601 15.1198 9.07802 15.0728 8.87602 14.7748L5.88001 10.3548C5.57401 9.90383 4.93401 9.77782 4.47501 10.0788C4.01701 10.3798 3.88901 11.0088 4.19501 11.4598L7.19001 15.8798C8.09201 17.2088 9.84901 17.3778 10.998 16.2478L19.736 7.68481C20.125 7.30081 20.125 6.65683 19.736 6.27283C19.541 6.08083 19.273 5.99683 19.018 5.99683Z' fill='%23F9FAFB'/%3E%3C/svg%3E");
+      background-image: url("data:image/svg+xml,%3Csvg width='10' height='8' viewBox='0 0 10 8' fill='none' xmlns='http://www.w3.org/2000/svg'%3E%3Cpath fill-rule='evenodd' clip-rule='evenodd' d='M9.82771 0.195262C10.0574 0.455612 10.0574 0.877722 9.82771 1.13807L3.94536 7.80474C3.71564 8.06509 3.34319 8.06509 3.11347 7.80474L0.17229 4.4714C-0.05743 4.21105 -0.05743 3.78894 0.17229 3.5286C0.40201 3.26825 0.77446 3.26825 1.00418 3.5286L3.52941 6.39052L8.99582 0.195262C9.22554 -0.0650874 9.59799 -0.0650874 9.82771 0.195262Z' fill='white' /%3E%3C/svg%3E");
     }
 
     &:focus {
@@ -39,5 +39,7 @@
 
   &__text {
     font-size: 14px;
+    line-height: 150%;
+    color: $grey-800;
   }
 }
